--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <title>Restaurant Reviews</title>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
-  <script>
-    'serviceWorker' in navigator && navigator.serviceWorker.register('/sw.js');
-  </script>
+  <script src="js/register-sw.js"></script>
 </head>
 
 <body>
@@ -32,7 +30,7 @@
       </div>
       <div id="restaurants-list"></div>
       <footer id="footer">
-        Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> <span>All Rights Reserved.</span>
+        © 2018 <a href="/"><strong>Restaurant Reviews</strong></a> <span>All Rights Reserved.</span>
       </footer>
     </section>
     <section id="map-container" aria-label="Restaurants Map">
