--- a/restaurant.html
+++ b/restaurant.html
@@ -7,9 +7,7 @@
   <title>Restaurant Info</title>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <script>
-    'serviceWorker' in navigator && navigator.serviceWorker.register('/sw.js');
-  </script>
+  <script src="js/register-sw.js"></script>
 </head>
 
 <body class="inside">
@@ -37,7 +35,7 @@
         </section>
       </article>
       <footer id="footer">
-        Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+        © 2018 <a href="/"><strong>Restaurant Reviews</strong></a> <span>All Rights Reserved.</span>
       </footer>
     </section>
     <section id="map-container">
