Code review changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         © 2018 <a href="/"><strong>Restaurant Reviews</strong></a> <span>All Rights Reserved.</span>
       </footer>
     </section>
-    <section id="map-container" aria-label="Restaurants Map">
+    <section id="map-container" aria-label="Restaurants Map" role="application">
       <div id="map"></div>
     </section>
   </main>
