--- a/restaurant.html
+++ b/restaurant.html
@@ -24,7 +24,7 @@
         </ol>
       </nav>
       <article id="restaurant-container">
-        <h1 id="restaurant-name"></h1>
+        <h2 id="restaurant-name"></h2>
         <p id="restaurant-cuisine"></p>
         <img id="restaurant-img">
         <address id="restaurant-address"></address>
@@ -37,7 +37,7 @@
         © 2018 <a href="/"><strong>Restaurant Reviews</strong></a> <span>All Rights Reserved.</span>
       </footer>
     </section>
-    <section id="map-container">
+    <section id="map-container" aria-label="Restaurant location Map" role="application">
       <div id="map"></div>
     </section>
   </main>
